[product-head] added scrollable on overflow header and fixed example

--- a/tools/playground/src/components/nav.css
+++ b/tools/playground/src/components/nav.css
@@ -34,6 +34,7 @@
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
+  flex-shrink: 0;
 }
 
 .intergalactic-playground_title {
